--- a/icons.qrc
+++ b/icons.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/new/prefix1">
-        <file alias="edit-cut">C:/Users/Büro/Desktop/edit-cut.svg</file>
-    </qresource>
+    <qresource prefix="/new/prefix1"/>
 </RCC>
