--- a/Bilder.qrc
+++ b/Bilder.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/MyFiles">
         <file>afuberechnung.pro</file>
-        <file>C:/Users/Büro/Pictures/Amateurfunk_HAMRadio.JPG</file>
-        <file>C:/Users/Büro/Pictures/Amateurfunk_Wellenlaenge.JPG</file>
-        <file>C:/Users/Büro/Pictures/Amateurfunkantenne.jpg</file>
+        <file>E:/Bilder/Amateurfunk_HAMRadio.JPG</file>
+        <file>E:/Bilder/Amateurfunk_Wellenlaenge.JPG</file>
+        <file>E:/Bilder/Amateurfunkantenne.jpg</file>
     </qresource>
 </RCC>
