--- a/Bilder.qrc
+++ b/Bilder.qrc
@@ -4,5 +4,6 @@
         <file>E:/Bilder/Amateurfunk_HAMRadio.JPG</file>
         <file>E:/Bilder/Amateurfunk_Wellenlaenge.JPG</file>
         <file>E:/Bilder/Amateurfunkantenne.jpg</file>
+        <file>E:/Bilder/Spannungsteiler.JPG</file>
     </qresource>
 </RCC>
